--- a/WooCommerce/Classes/ViewRelated/Products/Cells/TitleBodyTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Products/Cells/TitleBodyTableViewCell.xib
@@ -12,40 +12,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="TitleBodyTableViewCell" customModule="WooCommerce" customModuleProvider="target">
+        <tableViewCell contentMode="scaleAspectFit" selectionStyle="none" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="TitleBodyTableViewCell" customModule="WooCommerce" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="86"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="85.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="ZGi-KV-wFc">
-                        <rect key="frame" x="16" y="11" width="288" height="64"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDD-72-x0V">
-                                <rect key="frame" x="0.0" y="0.0" width="288" height="31"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aos-vn-8pP">
-                                <rect key="frame" x="0.0" y="33" width="288" height="31"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="aos-vn-8pP" firstAttribute="width" secondItem="ZGi-KV-wFc" secondAttribute="width" id="MKu-qP-bI6"/>
-                            <constraint firstItem="SDD-72-x0V" firstAttribute="width" secondItem="ZGi-KV-wFc" secondAttribute="width" id="gPd-fD-xPe"/>
-                        </constraints>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDD-72-x0V">
+                        <rect key="frame" x="16" y="11" width="288" height="39.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aos-vn-8pP">
+                        <rect key="frame" x="16" y="54.5" width="288" height="20.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ZGi-KV-wFc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="59y-3z-VKl"/>
-                    <constraint firstItem="ZGi-KV-wFc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Ga9-El-P3p"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="ZGi-KV-wFc" secondAttribute="bottom" id="Lah-23-dg3"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="ZGi-KV-wFc" secondAttribute="trailing" id="xUk-b4-JG5"/>
+                    <constraint firstItem="SDD-72-x0V" firstAttribute="leading" secondItem="aos-vn-8pP" secondAttribute="leading" id="8Es-2A-83v"/>
+                    <constraint firstItem="SDD-72-x0V" firstAttribute="trailing" secondItem="aos-vn-8pP" secondAttribute="trailing" id="B7V-6t-CiX"/>
+                    <constraint firstItem="SDD-72-x0V" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Pta-Bi-Sme"/>
+                    <constraint firstItem="aos-vn-8pP" firstAttribute="top" secondItem="SDD-72-x0V" secondAttribute="bottom" constant="4" id="W15-Ln-qAa"/>
+                    <constraint firstItem="SDD-72-x0V" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="WTQ-UF-sVY"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="aos-vn-8pP" secondAttribute="bottom" id="ZMQ-Aa-7JA"/>
+                    <constraint firstItem="SDD-72-x0V" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="c4Y-7r-lUj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
